Третья версия проекта

--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: #fff;
   }
 .header__logo{
     height: 30px;
@@ -38,6 +42,8 @@ header{
   .about__sun-image{
     width: 100px;
     height: 100px;
+    animation: rotation 10s linear infinite;
+    position: absolute;
   }
   .about{
     background: url('img/back.png') no-repeat;
@@ -162,4 +168,15 @@ header{
   }
   .footer__links a{
     margin-bottom: 15px;
+  }
+  @keyframes rotation{
+    0%{
+      transform: rotate(0);
+    }
+    50%{
+      transform: rotate(180deg);
+    }
+    100%{
+      transform: rotate(360deg);
+    }
   }
